--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section id="contact" class="container">
   <h2>Contact Us</h2>
   <p>If you have any questions or would like to request access to our private beta, please feel free to reach out:</p>
-  <p>Email: <a href="mailto:info@codebetter.ai">info@codebetter.ai</a></p>
+  <p>Email: <a href="mailto:codebetterai@gmail.com">info@codebetter.ai</a></p>
   <p>Phone: +1 (647) 388-9383</p>
 </section>
 <footer>
