updated site to be more tech like and added a use cases section

--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="index.css">
-<title>CodeBetter</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
+  <title>CodeBetter</title>
 </head>
 <body>
-<header>
-  <img src="logo.png" alt="CodeBetter Logo">
-  <h1>CodeBetter</h1>
-</header>
-<nav>
-  <a href="#home">Home</a>
-  <a href="#features">Features</a>
-  <a href="#pricing">Pricing</a>
-  <a href="#contact">Contact</a>
-</nav>
-<section id="hero">
-  <div class="container">
-    <h1>Boost Your Productivity with Our Self-Hosted AI Code Assistant designed for Data Privacy</h1>
-  </div>
-</section>
-<section id="features" class="container">
-  <h2>Key Features</h2>
-  <div class="features">
-    <div class="feature">
-      <h3>Language Support</h3>
-      <p>Our tools support a wide range of programming languages, including Python, JavaScript, Java, C++, and more.</p>
+  <header>
+    <img src="logo.png" alt="CodeBetter Logo">
+    <h1>CodeBetter</h1>
+  </header>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#features">Features</a>
+    <a href="#pricing">Pricing</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <section id="hero">
+    <div class="container">
+      <h1>Boost Your Productivity with Our Self-Hosted AI Code Assistant designed for Data Privacy</h1>
     </div>
-    <div class="feature">
-      <h3>Integrations</h3>
-      <p>Easily integrate our tools with your favorite IDEs and code editors, such as VSCode, JetBrains Products and many more!
+  </section>
+  <section id="features" class="container">
+    <h2>Key Features</h2>
+    <div class="features">
 
+      <div class="feature">
+        <h3>Language Support</h3>
+        <p>Our tools support a wide range of programming languages, including Python, JavaScript, Java, C++, and more.</p>
+      </div>
+      <div class="feature">
+        <h3>Integrations</h3>
+        <p>Easily integrate our tools with your favorite IDEs and code editors, such as VSCode, JetBrains Products and many more!
+
+      </div>
+      <div class="feature">
+        <h3>Privacy & Security</h3>
+        <p>Keep your code secure and protect your intellectual property with our self-hosted solution, ensuring your data stays within your network.</p>
+      </div>
     </div>
-    <div class="feature">
-      <h3>Privacy & Security</h3>
-      <p>Keep your code secure and protect your intellectual property with our self-hosted solution, ensuring your data stays within your network.</p>
+  </section>
+  <section id="use-cases" class="container">
+    <div class="use-cases">
+      <h2>Use Cases</h2>
+      <ul>
+        <li>Code generation using natural language</li>
+        <li>Code transliteration</li>
+        <li>Code documentation</li>
+        <li>Code explanation</li>
+      </ul>
     </div>
-  </div>
-</section>
-<section id="pricing" class="container">
-  <h2>Pricing</h2>
-  <p>We are currently in private beta. To learn more about our pricing plans and to request access, please contact us.</p>
-</section>
-<section id="contact" class="container">
-  <h2>Contact Us</h2>
-  <p>If you have any questions or would like to request access to our private beta, please feel free to reach out:</p>
-  <p>Email: <a href="mailto:codebetterai@gmail.com">info@codebetter.ai</a></p>
-  <p>Phone: +1 (647) 388-9383</p>
-</section>
-<footer>
-  <p>&copy; 2023 CodeBetterAI. All rights reserved.</p>
-</footer>
+  </section>  
+  <section id="pricing" class="container">
+    <h2>Pricing</h2>
+    <p>We are currently in private beta. To learn more about our pricing plans and to request access, please contact us.</p>
+  </section>
+  <section id="contact" class="container">
+    <h2>Contact Us</h2>
+    <p>If you have any questions or would like to request access to our private beta, please feel free to reach out:</p>
+    <p>Email: <a href="mailto:codebetterai@gmail.com">info@codebetter.ai</a></p>
+    <p>Phone: +1 (647) 388-9383</p>
+  </section>
+  <footer>
+    <p>&copy; 2023 CodeBetterAI. All rights reserved.</p>
+  </footer>
 </body>
 </html>
